syntax="proto3";
package calculator;
option java_package="com.proto.calculator";
option java_multiple_files=true;
message CalculatorRequest{
  int32  first_number=1;
  int32 second_number=2;
}
message CalculatorResponse{
  int32 result=1;
}
message PrimeNumberDecompostionRequest{
  int32 number=1;
}
message PrimeNumberDecompostionResponse{
  int32  prime_factor=1;

}
message ComputeAverageRequest{
  int32 nun=1;
}
message ComputeAverageResponse{
  double average=1;
}
service CalculatorService {
  rpc sum(CalculatorRequest) returns (CalculatorResponse){};
  rpc PrimeNumberDecompostion (PrimeNumberDecompostionRequest)
      returns (stream PrimeNumberDecompostionResponse){};
  rpc ComputeAverage(stream ComputeAverageRequest) returns(ComputeAverageResponse){};
}
